asg/tests/pass/boolean/output_register.leo
function main() -> bool {
    return input.registers.r;
}
