asg/tests/fail/statements/num_returns_fail.leo
function main() -> (bool, bool) {
    return true;
}